--- a/livingroom_conf/templates/default/70-rabbitmq.conf.erb
+++ b/livingroom_conf/templates/default/70-rabbitmq.conf.erb
@@ -1,7 +1,7 @@
 module(load="imfile" PollingInterval="10")
 
 input(type="imfile"
-      File="/var/log/rabbitmq/rabbit@<%= @hostname %>"
+      File="/var/log/rabbitmq/rabbit@<%= @hostname %>.log"
       Tag="rabbitmq"
       Severity="error"
       Facility="local7")
