Set up configuration of PATH/shell profile

--- a/3i-deploy/templates/default/cli-.bash_profile.erb
+++ b/3i-deploy/templates/default/cli-.bash_profile.erb
@@ -1,1 +1,1 @@
-export PATH=$PATH:/srv/www/<%= application %>/current/bin
+export PATH=$PATH:<%= ::File.join(deploy[:deploy_to], "current", "bin") %>
