Add redisflush command to shell
Ops uses this command to flush the CMS redis cache after updating
metadata through manual pulls

--- a/metadata_collector/templates/default/.bash_profile.erb
+++ b/metadata_collector/templates/default/.bash_profile.erb
@@ -1,3 +1,9 @@
+
+i# Get the aliases and functions
+if [ -f ~/.bashrc ]; then
+        . ~/.bashrc
+fi
+
 for script in /home/ubuntu/profile.d/* ; do
 
   if [ -r $script ] ; then
