Fixes to before rotate script
Apparently logrotate passes the whole list of files that will be rotated

--- a/3i-deploy/templates/default/3i_logrotate.erb
+++ b/3i-deploy/templates/default/3i_logrotate.erb
@@ -9,7 +9,7 @@
         sharedscripts
         <% if defined? @log_archive_bucket %>
         prerotate
-          beforeRotateLog.sh $1 <%= @log_archive_bucket %>
+          beforeRotateLog.sh <%= @log_archive_bucket %> $1
         endscript
         <% end -%>
         <% if (node[:platform] == 'ubuntu' && node[:platform_version] == '14.04') || rhel7? -%>
