Allow rotate count configurable by application environment

--- a/3i-deploy/templates/default/3i_logrotate.erb
+++ b/3i-deploy/templates/default/3i_logrotate.erb
@@ -1,7 +1,7 @@
 <% @log_dirs.each do |dir| %><%= dir %>/*.log <% end %> {
         daily
         missingok
-        rotate <%= node[:logrotate][:rotate] %>
+        rotate <%= @log_rotate_count  %>
         compress
         delaycompress
         notifempty
