--- a/3i-deploy/templates/default/cleanup_old_releases_crontab.erb
+++ b/3i-deploy/templates/default/cleanup_old_releases_crontab.erb
@@ -1,5 +1,5 @@
 SHELL=/bin/bash
-PATH=/sbin:/bin:/usr/sbin:/usr/bin
+PATH=/sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin
 MAILTO=root
 HOME=/
 
@@ -24,3 +24,4 @@ HOME=/
 # *  *  *  *  * user-name command to be executed
 
 0 * * * * root cleanup_old_releases.rb <%= @releases_folder_path %>
+
